# cajal

./: .gitignore  example_connectivity.py  example_scrna.py  hypotheses.md  pyproject.toml
analyses/burst-layer-utype/: results.json  run.py
analyses/common-cause-ww-gene/: results.json  run.py
analyses/connectivity-gene-ephys-chain/: requirements.txt  results.json  run.py
analyses/connectivity-gene-mantel/: requirements.txt  results.json  run.py
analyses/connectivity-thal-nw/: results.json  run.py
analyses/gaba-glut-spatial/: results.json  run.py
analyses/gene-coexpression-pcs/: requirements.txt  results.json  run.py
analyses/gene-modulation-depth/: results.json  run.py
analyses/ieg-calcium-activity/: results.json  run.py
analyses/l5-gaba-excess/: requirements.txt  results.json  run.py
analyses/l6-nw-excess/: results.json  run.py
analyses/layer-controlled-gene-burst/: requirements.txt  results.json  run.py
analyses/layer-gaba-gradient/: results.json  run.py
analyses/layer-rate-utype/: results.json  run.py
analyses/layer5-gaba-nw/: results.json  run.py
analyses/like-connects-with-like/: results.json  run.py
analyses/md-thal-gaba/: results.json  run.py
analyses/merfish-entropy-vs-rate/: results.json  run.py
analyses/merfish-gene-activity/: requirements.txt  results.json  run.py
analyses/network-analysis/: requirements.txt  results.json  run.py
analyses/nw-burst-index/: results.json  run.py
analyses/permutation-fdr-gene-pcs/: results.json  run.py
analyses/pfc-electro-spatial/: results.json  (+1 more)
src/: loader.py  structures.py  urls.py
(+29 files in other folders)
