[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "cajal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
    "anndata>=0.10",
    "h5py>=3.10",
    "one-api>=3.5.2",
    "polars>=1.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
